# reposcope-ai

./: .gitignore  ACTION_README.md  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: reposcope.yml
reposcope/src/ai/: factory.py  noop.py  openai_provider.py  provider.py
reposcope/src/analyzers/: architecture.py  onboarding.py  risks.py
reposcope/src/cli/: main.py
reposcope/src/report/: pr_comment.py  writer.py
reposcope/src/scanner/: repo_loader.py  repo_scanner.py  types.py
reposcope/src/utils/: git_tools.py  ignore.py  paths.py
tests/: conftest.py  test_ai_fallback.py  test_ownership.py  test_pr_impact.py  test_smoke.py
